@@ -11,10 +11,12 @@ use Dist::Zilla::File::InMemory;
 use Moose;
 
 has _leap_second_data => (
-    is      => 'ro',
-    isa     => 'HashRef',
+    traits  => ['Array'],
+    is      => 'bare',
+    isa     => 'ArrayRef',
     lazy    => 1,
     builder => '_build_leap_second_data',
+    handles => { _leap_second_data => 'elements' },
 );
 
 with 'Dist::Zilla::Role::FileGatherer';
@@ -37,121 +39,90 @@ my %months = map { $_ => $x++ }
 
 sub _build_leap_second_data {
     my $self = shift;
+    my @steps;
 
-    open my $fh, '<', 'leaptab.txt';
-
-    my @leap_seconds;
-    my @rd;
-    my %rd_length;
-
-    my $value = -1;
+    open my $fh, '<', 'leaptab.txt' or die $!;
     while (<$fh>) {
         my ( $year, $mon, $day, $leap_seconds ) = split /\s+/;
 
         $mon =~ s/\W//;
-
-        $leap_seconds =~ s/^([+-])//;
-        my $mult = $1 eq '+' ? 1 : -1;
-
         my $utc_epoch = _ymd2rd( $year, $months{$mon}, $day );
 
-        $value += $leap_seconds * $mult;
-
-        push @leap_seconds, $value;
-        push @rd,           $utc_epoch;
-
-        $rd_length{ $utc_epoch - 1 } = $leap_seconds;
+        push @steps, [ $utc_epoch => $leap_seconds ];
     }
 
     close $fh;
 
-    push @leap_seconds, ++$value;
+    return \@steps;
+}
 
-    return {
-        leap_seconds => \@leap_seconds,
-        rd           => \@rd,
-        rd_length    => \%rd_length,
-    };
+sub _macro_lines {
+    join "\n", map sprintf( "    %-37s\\", $_ ), @_;
+}
+
+sub set_leap_seconds {
+    my $self = shift;
+
+    # The most recent leaps have a higher chance to match
+    my $count  = 0;
+    my @checks = "$count;";
+    foreach my $step ( $self->_leap_second_data ) {
+        $count += $step->[1];
+        unshift @checks, "utc_rd >= $step->[0] ? $count :";
+    }
+    my $checks = _macro_lines(@checks);
+
+    return <<__LEAP;
+
+/* utc_rd must be a simple variable */
+#define SET_LEAP_SECONDS(utc_rd, leaps)  \\
+  (leaps) =                              \\
+$checks\
+__LEAP
+}
+
+sub set_extra_seconds {
+    my $self = shift;
+
+    my @checks;
+    foreach my $step ( $self->_leap_second_data ) {
+        push @checks, "case $step->[0]: es = $step->[1]; break;";
+    }
+
+    my $checks = _macro_lines(@checks);
+
+    return <<__EXTRA_SECONDS;
+#define SET_EXTRA_SECONDS(utc_rd, es)    \\
+    switch (utc_rd +1) {                 \\
+$checks\
+    default: es = 0;                     \\
+    }
+__EXTRA_SECONDS
+}
+
+sub set_day_length {
+    my $self = shift;
+
+    my @checks;
+    foreach my $step ( $self->_leap_second_data ) {
+        push @checks, "case $step->[0]: dl = 86400 + $step->[1]; break;";
+    }
+    my $checks = _macro_lines(@checks);
+
+    return <<__DAY_LENGTH;
+#define SET_DAY_LENGTH(utc_rd, dl)       \\
+    switch (utc_rd +1) {                 \\
+$checks\
+    default: dl = 86400;                 \\
+    }
+__DAY_LENGTH
 }
 
 sub _header {
     my $self = shift;
 
-    my ( $leap_seconds, $rd, $rd_length )
-        = @{ $self->_leap_second_data }{qw( leap_seconds rd rd_length )};
-
-    my $set_leap_seconds = <<"EOF";
-
-#define SET_LEAP_SECONDS(utc_rd, ls)  \\
-{                                     \\
-  {                                   \\
-    if (utc_rd < $rd->[0]) {            \\
-      ls = $leap_seconds->[0];           \\
-EOF
-
-    for ( my $x = 1; $x < @{$rd}; $x++ ) {
-        my $condition
-            = $x == @{$rd}
-            ? "utc_rd < $rd->[$x]"
-            : "utc_rd >= $rd->[$x - 1] && utc_rd < $rd->[$x]";
-
-        $set_leap_seconds .= <<"EOF"
-    } else if ($condition) {  \\
-      ls = $leap_seconds->[$x];                      \\
-EOF
-    }
-
-    $set_leap_seconds .= <<"EOF";
-    } else {                         \\
-      ls = $leap_seconds->[-1];       \\
-    }                              \\
-  }                                \\
-}
-EOF
-
-    my $set_extra_seconds = <<"EOF";
-
-#define SET_EXTRA_SECONDS(utc_rd, es)  \\
-{                                      \\
-  {                                    \\
-    es = 0;                            \\
-    switch (utc_rd) {                  \\
-EOF
-
-    my $set_day_length = <<"EOF";
-
-#define SET_DAY_LENGTH(utc_rd, dl)     \\
-{                                      \\
-  {                                    \\
-    dl = 86400;                        \\
-    switch (utc_rd) {                  \\
-EOF
-
-    foreach my $utc_rd ( sort keys %{$rd_length} ) {
-        $set_extra_seconds .= <<"EOF";
-      case $utc_rd: es = $rd_length->{$utc_rd}; break;            \\
-EOF
-
-        $set_day_length .= <<"EOF";
-      case $utc_rd: dl = 86400 + $rd_length->{$utc_rd}; break;    \\
-EOF
-    }
-
-    $set_extra_seconds .= <<"EOF";
-    }                                  \\
-  }                                    \\
-}
-EOF
-
-    $set_day_length .= <<"EOF";
-    }                                  \\
-  }                                    \\
-}
-EOF
-
     my $generator = ref $self;
-
-    my $header = <<"EOF";
+    my $header    = <<__HEADER;
 /*
 
 This file is auto-generated by the leap second code generator ($VERSION). This
@@ -163,14 +134,13 @@ Generated $generator.
 Do not edit this file directly.
 
 */
-EOF
+__HEADER
 
-    return join q{}, (
+    return join "\n",
         $header,
-        $set_leap_seconds,
-        $set_extra_seconds,
-        $set_day_length,
-    );
+        $self->set_leap_seconds,
+        $self->set_extra_seconds,
+        $self->set_day_length;
 }
 
 # from lib/DateTimePP.pm
