@@ -1,5 +1,10 @@
 {{$NEXT}}
 
+- Simplify the calculation of leap seconds in XS. This is a little more
+  efficient for most use cases (anything with future or recent past
+  datetimes). Contributed by Mark Overmeer. GH #91.
+
+
 1.51   2019-04-21
 
 - Fix CLDR formatting of 'S' pattern with more than 9 digits of
